fix button wrap for small displays

--- a/_assets/css/_icn21-customizations.scss
+++ b/_assets/css/_icn21-customizations.scss
@@ -674,6 +674,15 @@ a.button{
     .leftnav img {
         display: none;
     }
+
+    .ui-listview .ui-li-aside {
+        position: relative;
+        top: 0.3em;
+        bottom: 0.3em;
+        right: 0;
+        margin: 0;
+        text-align: center;
+    }
 }
 
 /* Bigger screens */
